--- a/still.css
+++ b/still.css
@@ -3,46 +3,46 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Times New Roman", sans-serif;
-  }
-  
+}
+
 body img {
     max-width: 100%;
 }
 
-.header{
+.header {
     display: flex;
     flex-direction: column;
 }
 
 .header .div1 {
-    display: flex;
-    height: 60px;
-    width: 100%;
     background-color: #D9D9D9;
     justify-content: space-between;
     align-items: center;
+    display: flex;
+    height: 60px;
+    width: 100%;
     padding: 0 5%;
 }
 
-.header .div1 .jezici ul{
-    display: flex;
-    gap: 20px;
+.header .div1 .jezici ul li {
+    list-style-type: none;
+    display: inline-block;
+    margin-left: 20px;
+
 }
 
-.header .div1 .jezici ul  li{
-    list-style-type: none;
-}
-.header .div1 .jezici ul  li a{
+.header .div1 .jezici ul li a {
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif;
     letter-spacing: 0em;
     -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+    text-decoration-line: underline;
 }
+
 .header .div1 .jezici ul li .active {
     text-decoration: none;
     color: rgb(171, 169, 169);
-  }
+}
 
 .header .navbar {
     display: flex;
@@ -63,13 +63,214 @@ body img {
     list-style-type: none;
     border: 0.5px solid #6C6C6C;
     padding: 2rem;
-  
+
 }
+
 .header .navbar ul li h3 {
     font-family: "Roboto Condensed", sans-serif;
     font-size: 16px;
-  }
-  .header .navbar ul li p {
+}
+
+.header .navbar ul li p {
     font-family: "Roboto", sans-serif;
     font-size: 10px;
+}
+
+main .Image {
+    position: relative;
+}
+
+main .Image .circleImg {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+}
+
+main .Image .circleImg:hover {
+    cursor: pointer;
+}
+
+main .img100 {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
+
+main .divVeliki {
+    display: flex;
+    margin: 3rem 0;
+    gap: 2rem;
+}
+
+main .divVeliki .slikaLevo {
+    flex: 1;
+}
+
+main .divVeliki .slikaLevo .imgLevo {
+    max-width: none;
+}
+
+main .divVeliki .tekstDesno {
+    flex: 1;
+    margin-right: 10rem;
+}
+
+main .divVeliki .tekstDesno .gore .naslovVeliki {
+    display: flex;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 42px;
+    line-height: 34px;
+    color: #303030;
+}
+
+main .divVeliki .tekstDesno .gore .line {
+    height: 6px;
+    width: 137px;
+    background-color: #ec1120;
+    margin-top: 5%;
+}
+
+
+main .divVeliki .dvgOneRight .gore .naslovMali h4 {
+    color: #474747;
+    font-family: Inter;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 34px;
+    letter-spacing: 0em;
+    text-align: left;
+
+
+}
+
+main .divVeliki .tekstDesno .gore .lineSiva {
+    height: 3px;
+    width: 500px;
+    background-color: #b9b6b6;
+    margin-top: 5%;
+}
+
+main .divVeliki .tekstDesno .doleTekst {
+    margin-top: 20px;
+    font-family: "Roboto", sans-serif;
   }
+  main .divVeliki .tekstDesno .doleTekst p {
+    font-style: "Roboto";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22.4px;
+    color: rgba(71, 71, 71, 1);
+    ;
+  }
+
+  main .divVeliki .tekstDesno .doleTekst .oNama {
+    width: 184px;
+    height: 48px;
+    display: inline-block;
+    top: 1374px;
+    left: 765px;
+    font-size: medium;
+    border-radius: 4px;
+    gap: 8px;
+    background: rgba(191, 15, 15, 1);
+    color: #fff;
+    text-align: center;
+    border: 0;
+    margin-top: 3%;
+    font-weight: 500;
+    border-radius: 4px;
+
+  }
+
+  * {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
