--- a/still.css
+++ b/still.css
@@ -5,8 +5,12 @@
     font-family: "Times New Roman", sans-serif;
 }
 
-body img {
+body {
     max-width: 100%;
+    height: 2000px;
+    background-image: url('images/tobias-reich-Evw7_g2qn_g-unsplash.jpg'); 
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .header {
@@ -30,6 +34,9 @@ body img {
     margin-left: 20px;
 
 }
+.header ul {
+  background-color: white;
+}
 
 .header .div1 .jezici ul li a {
     text-decoration: none;
@@ -37,6 +44,8 @@ body img {
     letter-spacing: 0em;
     -webkit-text-decoration-line: underline;
     text-decoration-line: underline;
+    background-color: white;
+
 }
 
 .header .div1 .jezici ul li .active {
@@ -76,31 +85,76 @@ body img {
     font-size: 10px;
 }
 
-main .Image {
-    position: relative;
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: auto;
+  position: absolute;
+  margin: auto;
+  background-color: #fff;
 }
 
-main .Image .circleImg {
-    position: absolute;
-    bottom: 10%;
-    left: 50%;
+.slideshow-container .circleImg {
+  position: absolute;
+ 
 }
 
-main .Image .circleImg:hover {
-    cursor: pointer;
+.slideshow-container .circleImg:hover {
+  cursor: pointer;
+}
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
-main .img100 {
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
 
 main .divVeliki {
+  background-color: white;
     display: flex;
     margin: 3rem 0;
     gap: 2rem;
-}
+    position: relative;
+  }
 
 main .divVeliki .slikaLevo {
     flex: 1;
@@ -125,13 +179,6 @@ main .divVeliki .tekstDesno .gore .naslovVeliki {
     color: #303030;
 }
 
-main .divVeliki .tekstDesno .gore .line {
-    height: 6px;
-    width: 137px;
-    background-color: #ec1120;
-    margin-top: 5%;
-}
-
 
 main .divVeliki .dvgOneRight .gore .naslovMali h4 {
     color: #474747;
@@ -141,6 +188,7 @@ main .divVeliki .dvgOneRight .gore .naslovMali h4 {
     line-height: 34px;
     letter-spacing: 0em;
     text-align: left;
+    margin-top: 2%;
 
 
 }
@@ -187,15 +235,24 @@ main .divVeliki .tekstDesno .doleTekst {
   * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
-img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
+  background-color: white;
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
+.slideshow-container .circleImg {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+}
+
+.slideshow-container .circleImg:hover {
+  cursor: pointer;
+}
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -234,31 +291,6 @@ img {vertical-align: middle;}
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
 /* Fading animation */
 .fade {
   animation-name: fade;
@@ -270,7 +302,147 @@ img {vertical-align: middle;}
   to {opacity: 1}
 }
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+
+.container {
+  position: relative;
+  width: 100%;
+}
+
+.image {
+  display: block;
+  height:400px;
+  width:2000px;
+  text-align: center;
+}
+
+
+.text {
+  color: white;
+  font-size: 50px;
+  height: 50%;
+  width: 50%;
+  text-align: center;
+}
+
+h4 {
+  font-size: 20px;
+  color: rgb(64, 47, 47);
+}
+
+.sivalinija::after {
+  content: "";
+  display:block;
+  width: 80%;
+  height: 6px;
+  background-color: rgb(209, 201, 201);
+}
+
+.text::after{
+  content: "";
+  display:block;
+  width: 80%;
+  height: 6px;
+  background-color: rgb(246, 89, 89);
+}
+
+main .triSlikeMale {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+}
+
+main .triSlikeMale p {
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  
+}
+.slikiceLinijice::after{
+  content: "";
+  height: 2px;
+  width: 20%;
+  background-color: #bf0f0f;
+  margin-top: 0.5rem;
+  display: block;
+
+}
+/* mobilni */
+@media only screen and (max-width: 600px) {
+
+  .divVeliki {
+    flex-direction: column;
+    height: auto;
+  }
+  .middle .text {
+  font-size: 16px;
+  }
+
+  .header .navbar .nav-links {
+    display: none; 
+  }
+
+  .header .navbar .burger {
+    display: block; 
+    background-color: #fff;
+  }
+
+  .header .navbar .nav-links.show {
+    display: flex; /* Prikazujemo horizontalni meni kad je burger meni otvoren */
+    flex-direction: column;
+    position: relative;
+    top: 0px; /* Prilagodite ovu vrijednost kako biste postigli željeni raspored */
+
+    background-color: #ffffff;
+  }
+
+  .header .navbar .nav-links li {
+    display: flex;
+  
+  }
+
+  .header .navbar .nav-links li h3 {
+    display: block;
+  font-size: 10px;}
+
+  .header .navbar .nav-links li p{
+    display: block; 
+
+}
+}
+header .navbar .burger {
+  display: none; 
+  font-size: 20px;
+}
+
+.parallax-container {
+  position: relative;
+  height: 400px; /* Podesite visinu prema vašim potrebama */
+  overflow: hidden;
+}
+
+.parallax-image {
+  width: 100%;
+  height: 500px; 
+}
+
+.parallax-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; 
+  color: #fff; 
+}
+
+.parallax-content h1 {
+  font-size: 36px; 
+}
+
+.parallax-content p {
+  font-size: 18px;
 }
