--- a/still.css
+++ b/still.css
@@ -11,6 +11,7 @@ body {
   background-image: url('images/tobias-reich-Evw7_g2qn_g-unsplash.jpg');
   background-size: cover;
   background-attachment: fixed;
+  
 }
 
 /* HEADER - logo, jezici, meni */
@@ -435,7 +436,6 @@ font-weight: 400;
 line-height: 34px;
 letter-spacing: 0em;
 text-align: center;
-width: 506px;
 
 }
 
@@ -465,31 +465,7 @@ padding: 80px;
 }
 
 
-.proizvodi {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
 
-
-}
-.proizvodi {
-  margin-top: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  padding: 80px 0;
-}
-.proizvodi .pIme {
-  flex: 20%;
-  margin-left: 50px;
-}
-.kartica {
-  flex: 20%;
-}
 
 /* mobilni */
 @media only screen and (max-width: 600px) {
@@ -540,3 +516,42 @@ padding: 80px;
   }
  
 }
+
+
+.slider-container {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  background-color: #fff;
+  align-items: center;
+  text-align: center;
+  overflow: hidden;
+  width: 70%;
+}
+
+.slide {
+  flex: 0 0 300px;
+  margin: 10px;
+  scroll-snap-align: start;
+  border: 1px solid #ccc;
+}
+.slides {
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+}
+
+.slide.active {
+  display: block;
+}
+
+.slide .images{
+  color: #db2d3c;
+  position: relative;
+}
+.slide .images .tekst-kartice {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+}
+
